tests/errors/sem.invalid-type.decl-type.or
main :: () -> void {
    X :: 6;
    y: X = 10;
    y;
};
